# FPFH_Coarse_Alignment

./: CMakeLists.txt  README.md  hello.md  obs_000000.ply  obs_000005.ply  plot_result.m  raw_000000.ply  raw_000005.ply  reLocalizer.cpp  reLocalizer.h  reLocalizer_test.cpp  stdafx.h  untitled11.m
